# JKMusicPlayer

JKMusic/: local.properties  settings.gradle
JKMusic/app/: build.gradle
JKMusic/app/src/androidTest/java/com/smallest/funny/jkmusic/: ExampleInstrumentedTest.java
JKMusic/app/src/main/: AndroidManifest.xml
JKMusic/app/src/main/java/com/smallest/funny/jkmusic/: MainActivity.java
JKMusic/app/src/main/res/layout/: activity_main.xml
JKMusic/app/src/main/res/values/: strings.xml
JKMusic/app/src/test/java/com/smallest/funny/jkmusic/: ExampleUnitTest.java
JKMusic/jkmusicplayer/: CMakeLists.txt  build.gradle
JKMusic/jkmusicplayer/src/androidTest/java/com/smallest/funny/jkmusicplayer/: ExampleInstrumentedTest.java
JKMusic/jkmusicplayer/src/main/: AndroidManifest.xml
JKMusic/jkmusicplayer/src/main/cpp/: native-lib.cpp
JKMusic/jkmusicplayer/src/main/java/com/smallest/funny/jkmusicplayer/: Demo.java
JKMusic/jkmusicplayer/src/main/res/values/: strings.xml
JKMusic/jkmusicplayer/src/test/java/com/smallest/funny/jkmusicplayer/: ExampleUnitTest.java
